start scroll switcher, add rover image

--- a/www/elements/elements.html
+++ b/www/elements/elements.html
@@ -1,4 +1,7 @@
 <!-- elements.html -->
+<!-- Iron Elements -->
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 
 <!-- Custom Elements -->
 <link rel="import" href="./site-shell/site-shell.html">
+<link rel="import" href="./scroll-switcher/scroll-switcher.html">
