add parallax to the site cover, add chevrons and header

--- a/www/elements/scroll-switcher/scroll-switcher.html
+++ b/www/elements/scroll-switcher/scroll-switcher.html
@@ -1,10 +1,15 @@
 <!-- scroll-switcher.html -->
+<!-- Custom Elements -->
+<link rel="import" href="../iron-resizable-relay/iron-resizable-relay.html">
 
 <dom-module id="scroll-switcher">
   <template>
     <style>
       :host {
         display: block;
+
+        --horizontal-offset: 0px;
+        --vertical-offset: 0px;
       }
 
       #mainWrapper {
@@ -19,13 +24,15 @@
 
       #roverImage {
         width: 300px;
+        transform: translateX(calc(0.7 * var(--horizontal-offset))) translateY(calc(0.7 * var(--vertical-offset)));
       }
 
       #headingWrapper {
         @apply --layout-vertical;
         @apply --layout-center;
 
-        color: rgb(19,19,19);
+        transform: translateX(calc(1 * var(--horizontal-offset))) translateY(calc(1 * var(--vertical-offset)));
+        color: var(--dark-strong-alpha);
       }
 
       #mainHeading {
@@ -39,6 +46,9 @@
         text-align: center;
       }
 
+      .gap {
+        height: 40px;
+      }
 
       .view::slotted(*) {
         height: 100vh;
@@ -47,17 +57,37 @@
         background: red;
       }
 
+      #arrowDown {
+        position: absolute;
+        bottom: 20px;
+        margin: auto;
+        color: var(--dark-normal-alpha);
+
+        transform: translateX(calc(0.3 * var(--horizontal-offset))) translateY(calc(0.3 * var(--vertical-offset)));
+
+        --iron-icon-height: 40px;
+        --iron-icon-width: var(--iron-icon-height);
+      }
+
+      .parallax {
+        transition-property: transform;
+        transition: 0.5s ease-out;
+      }
+
     </style>
 
     <div id="mainWrapper">
-      <img id="roverImage" src="../../resources/images/site-cover-rover.jpg" alt="The rover!"/>
-      <div id="headingWrapper">
+      <img id="roverImage" class="parallax" src="../../resources/images/site-cover-rover.jpg" alt="The rover!"/>
+      <div id="headingWrapper" class="parallax">
         <span id="mainHeading"><b>UCT</b> Mars Rover</span>
         <span id="secondaryHeading">An open Mars Curiosity Rover simulator.</span>
       </div>
+      <div class="gap"></div>
+      <iron-icon id="arrowDown" class="parallax" icon="site:down-double-chevron"></iron-icon>
     </div>
     <slot class="view" name="content"></slot>
 
+    <iron-resizable-relay id="ironResizableRelay"></iron-resizable-relay>
   </template>
   <script src="scroll-switcher.js" charset="utf-8"></script>
 </dom-module>
