--- a/www/elements/site-shell/site-shell.html
+++ b/www/elements/site-shell/site-shell.html
@@ -1,5 +1,6 @@
 <!-- site-shell.html -->
 <link rel="import" href="../scroll-switcher/scroll-switcher.html">
+<link rel="import" href="../site-header/site-header.html">
 
 <dom-module id="site-shell">
   <template>
@@ -11,12 +12,21 @@
         @apply --layout-center-justified;
       }
 
+      site-header {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+      }
+
       scroll-switcher {
         @apply --layout-flex;
 
         overflow: hidden;
       }
     </style>
+
+    <site-header></site-header>
 
     <scroll-switcher>
       <div slot="content"></div>
