restructure cover section

--- a/www/elements/site-shell/site-shell.html
+++ b/www/elements/site-shell/site-shell.html
@@ -17,6 +17,8 @@
         top: 0;
         left: 0;
         right: 0;
+
+        z-index: 1;
       }
 
       scroll-switcher {
@@ -28,7 +30,7 @@
 
     <site-header></site-header>
 
-    <scroll-switcher>
+    <scroll-switcher id="scrollSwitcher">
       <div slot="content"></div>
     </scroll-switcher>
 
