--- a/www/elements/scroll-switcher/scroll-switcher.html
+++ b/www/elements/scroll-switcher/scroll-switcher.html
@@ -6,30 +6,40 @@
   <template>
     <style>
       :host {
-        display: block;
+        position: relative;
+        height: 100%;
+        width: 100%;
+
+        background: var(--app-background);
 
         --horizontal-offset: 0px;
         --vertical-offset: 0px;
       }
 
-      #mainWrapper {
-        @apply --layout-vertical;
-        @apply --layout-center;
-        @apply --layout-center-justified;
-
-        height: 100%;
-        width: 100%;
-        background: #f5f5f5;
-      }
-
       #roverImage {
+        position: absolute;
+        top: calc(50% - 160px);
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+
         width: 300px;
         transform: translateX(calc(0.7 * var(--horizontal-offset))) translateY(calc(0.7 * var(--vertical-offset)));
+      }
+
+      :host([viewing="content"]) #roverImage {
+        transform: translateX(calc(0.7 * var(--horizontal-offset))) translateY(calc(0.7 * var(--vertical-offset))) translateX(100vw);
       }
 
       #headingWrapper {
         @apply --layout-vertical;
         @apply --layout-center;
+
+        position: absolute;
+        top: calc(50% - 20px);
+        left: 0;
+        right: 0;
+        margin: 0 auto;
 
         transform: translateX(calc(1 * var(--horizontal-offset))) translateY(calc(1 * var(--vertical-offset)));
         color: var(--dark-strong-alpha);
@@ -50,17 +60,12 @@
         height: 40px;
       }
 
-      .view::slotted(*) {
-        height: 100vh;
-        width: 100vw;
-
-        background: red;
-      }
-
       #arrowDown {
         position: absolute;
         bottom: 20px;
-        margin: auto;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
         color: var(--dark-normal-alpha);
 
         transform: translateX(calc(0.3 * var(--horizontal-offset))) translateY(calc(0.3 * var(--vertical-offset)));
@@ -69,22 +74,39 @@
         --iron-icon-width: var(--iron-icon-height);
       }
 
+      :host([on-the-chevron]) #arrowDown {
+        color: var(--dark-strong-alpha);
+
+        transform: scale(1.3) translateX(calc(0.3 * var(--horizontal-offset))) translateY(calc(0.3 * var(--vertical-offset)));
+      }
+
       .parallax {
-        transition-property: transform;
-        transition: 0.5s ease-out;
+        transition-property: transform, color;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-out;
+      }
+
+      :host([viewing="top"]) .view::slotted(*) {
+        display: none;
+      }
+
+      .view::slotted(*) {
+        height: 100vh;
+        width: 100vw;
+
+        background: red;
       }
 
     </style>
 
-    <div id="mainWrapper">
-      <img id="roverImage" class="parallax" src="../../resources/images/site-cover-rover.jpg" alt="The rover!"/>
-      <div id="headingWrapper" class="parallax">
-        <span id="mainHeading"><b>UCT</b> Mars Rover</span>
-        <span id="secondaryHeading">An open Mars Curiosity Rover simulator.</span>
-      </div>
-      <div class="gap"></div>
-      <iron-icon id="arrowDown" class="parallax" icon="site:down-double-chevron"></iron-icon>
+    <img id="roverImage" class="parallax" src="../../resources/images/site-cover-rover.jpg" alt="The rover!"/>
+    <div id="headingWrapper" class="parallax">
+      <span id="mainHeading"><b>UCT</b> Mars Rover</span>
+      <span id="secondaryHeading">An open Mars Curiosity Rover simulator.</span>
     </div>
+    <iron-icon id="arrowDown" class="parallax" icon="site:down-double-chevron"></iron-icon>
+
+    <!-- Content -->
     <slot class="view" name="content"></slot>
 
     <iron-resizable-relay id="ironResizableRelay"></iron-resizable-relay>
