--- a/www/elements/scroll-switcher/scroll-switcher.html
+++ b/www/elements/scroll-switcher/scroll-switcher.html
@@ -40,20 +40,50 @@
         left: 0;
         right: 0;
         margin: 0 auto;
+        color: var(--dark-strong-alpha);
 
         transform: translateX(calc(1 * var(--horizontal-offset))) translateY(calc(1 * var(--vertical-offset)));
-        color: var(--dark-strong-alpha);
+
+        transition-property: transform, color, top;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-out, ease-out, ease-in-out;
+        transition-delay: 0s, 0.3s, 0.6s;
+      }
+
+      :host([viewing="content"]) #headingWrapper {
+        top: 0;
+        color: var(--app-background);
+        transform: translateX(0) translateY(0);
       }
 
       #mainHeading {
         font-size: 4rem;
-        text-align: center;
       }
 
       #secondaryHeading {
         margin-top: -15px;
         font-size: 1.5rem;
+      }
+
+      #mainHeading,
+      #secondaryHeading {
         text-align: center;
+        cursor: default;
+        user-select: none;
+
+        transition-property: transform, margin-top;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-in-out;
+        transition-delay: 0.6s;
+      }
+
+      :host([viewing="content"]) #mainHeading,
+      :host([viewing="content"]) #secondaryHeading {
+        transform: scale(0.5);
+      }
+
+      :host([viewing="content"]) #secondaryHeading {
+        margin-top: -40px;
       }
 
       .gap {
@@ -80,34 +110,47 @@
         transform: scale(1.3) translateX(calc(0.3 * var(--horizontal-offset))) translateY(calc(0.3 * var(--vertical-offset)));
       }
 
+      :host([viewing="content"]) #arrowDown {
+        color: var(--light-normal-alpha);
+        transform: translateX(calc(0.3 * var(--horizontal-offset))) translateY(calc(0.3 * var(--vertical-offset))) scaleY(-1);
+      }
+
+      :host([on-the-chevron][viewing="content"]) #arrowDown {
+        color: var(--light-strong-alpha);
+        transform: scale(1.3) translateX(calc(0.3 * var(--horizontal-offset))) translateY(calc(0.3 * var(--vertical-offset))) scaleY(-1);
+      }
+
       .parallax {
         transition-property: transform, color;
         transition-duration: 0.3s;
         transition-timing-function: ease-out;
       }
 
-      :host([viewing="top"]) .view::slotted(*) {
-        display: none;
-      }
-
       .view::slotted(*) {
         height: 100vh;
         width: 100vw;
+        opacity: 1;
+        background: var(--dark-strong-alpha);
 
-        background: red;
+        transition: opacity 0.3s ease-in-out 0.3s;
+      }
+
+      :host([viewing="cover"]) .view::slotted(*) {
+        opacity: 0;
       }
 
     </style>
 
+    <!-- Content -->
+    <slot class="view" name="content"></slot>
+
     <img id="roverImage" class="parallax" src="../../resources/images/site-cover-rover.jpg" alt="The rover!"/>
-    <div id="headingWrapper" class="parallax">
+    <div id="headingWrapper">
       <span id="mainHeading"><b>UCT</b> Mars Rover</span>
       <span id="secondaryHeading">An open Mars Curiosity Rover simulator.</span>
     </div>
     <iron-icon id="arrowDown" class="parallax" icon="site:down-double-chevron"></iron-icon>
 
-    <!-- Content -->
-    <slot class="view" name="content"></slot>
 
     <iron-resizable-relay id="ironResizableRelay"></iron-resizable-relay>
   </template>
