simple page layout

--- a/www/elements/scroll-switcher/scroll-switcher.html
+++ b/www/elements/scroll-switcher/scroll-switcher.html
@@ -53,7 +53,7 @@
       :host([viewing="content"]) #headingWrapper {
         top: 0;
         color: var(--app-background);
-        transform: translateX(0) translateY(0);
+        transform: translateX(0) translateY(-10px);
       }
 
       #mainHeading {
