--- a/www/elements/elements.html
+++ b/www/elements/elements.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../bower_components/iron-iconset-svg/iron-iconset-svg.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 
 <!-- Paper Elements -->
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -14,3 +15,4 @@
 <link rel="import" href="./site-shell/site-shell.html">
 <link rel="import" href="./scroll-switcher/scroll-switcher.html">
 <link rel="import" href="./site-header/site-header.html">
+<link rel="import" href="./site-content/site-content.html">
