switch to app-builder-cli

--- a/www/elements/scroll-switcher/scroll-switcher.html
+++ b/www/elements/scroll-switcher/scroll-switcher.html
@@ -5,6 +5,32 @@
 <dom-module id="scroll-switcher">
   <template>
     <style>
+      @keyframes headingEnter {
+        from {
+
+        }
+
+        50% {
+
+        }
+
+        to {
+
+        }
+      }
+
+      @keyframes headingExit {
+
+      }
+
+      @keyframes roverEnter {
+
+      }
+
+      @keyframes roverexit {
+
+      }
+
       :host {
         position: relative;
         height: 100%;
